Use new Locale constructor